<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginEnd="34dp"
    android:layout_marginStart="34dp"
    android:orientation="vertical">

    <com.skeleton.util.customview.MaterialEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:drawablePadding="10dp"
        android:gravity="center"
        android:hint="@string/email"
        android:inputType="text"
        android:id="@+id/et_email"/>

    <com.skeleton.util.customview.MaterialEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:drawablePadding="10dp"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:id="@+id/et_password"/>

    <CheckBox
        android:id="@+id/tv_rememberme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:text="@string/remember_me"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/tv_forgotpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/forgot_password"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/btn_signin"
        android:textAllCaps="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_button_background"
        android:text="@string/signin"
        android:textColor="@color/white"
        />


</LinearLayout>