<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rllayout">

    <include layout="@layout/custom_toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:background="@color/white"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="78dp"
                android:src="@drawable/background_parts"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="84dp"
                android:layout_marginTop="6dp"
                android:src="@drawable/one_step"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="28dp">

            <TextView
                android:id="@+id/tv_text1"
                style="@style/profile1TextView"
                />

            <TextView
                android:id="@+id/tv_text2"
                style="@style/profile1TextView"
                />

            <TextView
                android:id="@+id/tv_text3"
                style="@style/profile1TextView"
                />

            <TextView
                android:id="@+id/tv_text4"
                style="@style/profile1TextView"
                />

            <TextView
                android:id="@+id/tv_text5"
                style="@style/profile1TextView"
                />

            <TextView
                android:id="@+id/tv_text6"
                style="@style/profile1TextView"
                />

            <TextView
                android:id="@+id/tv_text7"
                style="@style/profile1TextView"
                />
            <TextView
                android:id="@+id/tv_text8"
                style="@style/profile1TextView"
                />

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="18dp"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <com.skeleton.util.customview.MaterialEditText
                        android:id="@+id/et_relationshiphitory"
                        style="@style/profile1Text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/relationship_history"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <com.skeleton.util.customview.MaterialEditText
                        android:id="@+id/et_ethnicity"
                        style="@style/profile1Text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/ethnicity"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <com.skeleton.util.customview.MaterialEditText
                        android:id="@+id/et_religion"
                        style="@style/profile1Text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/religion"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <com.skeleton.util.customview.MaterialEditText
                        android:id="@+id/et_height"
                        style="@style/profile1Text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/height"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <com.skeleton.util.customview.MaterialEditText
                        android:id="@+id/et_bodytype"
                        style="@style/profile1Text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/body_type"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <com.skeleton.util.customview.MaterialEditText
                        android:id="@+id/et_smoking"
                        style="@style/profile1Text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/smoking"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <com.skeleton.util.customview.MaterialEditText
                        android:id="@+id/et_drinking"
                        style="@style/profile1Text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/drinking"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <com.skeleton.util.customview.MaterialEditText
                        android:id="@+id/et_orientation"
                        style="@style/profile1Text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/orientation"/>

                </android.support.design.widget.TextInputLayout>


                <Button
                    android:id="@+id/btn_next"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="22dp"
                    android:layout_marginStart="22dp"
                    android:background="@drawable/custom_button_background"
                    android:text="Next"
                    android:textAllCaps="false"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</RelativeLayout>